# toxicity

./: .gitignore  Main.ipynb  README.md  main.py  pyproject.toml
models/: NR-AR-LBD_best_model.joblib  NR-AhR_best_model.joblib  NR-Aromatase_best_model.joblib  NR-ER-LBD_best_model.joblib  NR-ER_best_model.joblib  NR-PPAR-gamma_best_model.joblib  SR-ARE_best_model.joblib  SR-ATAD5_best_model.joblib  SR-HSE_best_model.joblib  SR-MMP_best_model.joblib  SR-p53_best_model.joblib
notebook/: 1.EDA.html  1.EDA.ipynb  Main.ipynb  results_with_normalize.csv  results_without_normalize.csv
